Warning, Regression, slow vertex selection #70659

Closed
opened 2019-10-09 02:47:17 +02:00 by noki paike · 7 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: AMD Radeon HD 7600M Series ATI Technologies Inc. 4.5.13399 Core Profile Context 0

Blender Version
Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-08 22:16, hash: 0812949bbc
blender-2.81- a856c5eccf -windows64 already broken
Worked:
blender-2.81- 54a9649e26 -windows64

Short description of error
vertex selection became terribly slow, worked well in the previous build.

Exact steps for others to reproduce the error
regression.mp4

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: AMD Radeon HD 7600M Series ATI Technologies Inc. 4.5.13399 Core Profile Context 0 **Blender Version** Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-08 22:16, hash: `0812949bbc` blender-2.81- a856c5eccffb -windows64 **already broken** **Worked:** blender-2.81- 54a9649e2636 -windows64 **Short description of error** vertex selection became terribly slow, worked well in the previous build. **Exact steps for others to reproduce the error** [regression.mp4](https://archive.blender.org/developer/F7797937/regression.mp4)
Author

Added subscriber: @nokipaike

Added subscriber: @nokipaike
Germano Cavalcante was assigned by Campbell Barton 2019-10-09 04:00:13 +02:00
Germano Cavalcante removed their assignment 2019-10-09 14:19:02 +02:00
Clément Foucault was assigned by Germano Cavalcante 2019-10-09 14:19:02 +02:00

Added subscribers: @fclem, @mano-wii

Added subscribers: @fclem, @mano-wii

Regression introduced in e5858cc5be
@fclem, maybe we need to anticipate that "TODO"

Regression introduced in e5858cc5be @fclem, maybe we need to anticipate that "TODO"
Author

just some more info on what I found,
before I was able to select vertices quite smooth even in render eevee mode ..
now it is practically impossible.

just some more info on what I found, before I was able to select vertices quite smooth even in render eevee mode .. now it is practically impossible.
Author

just another useful info, I re-checked for security on that build that worked well, that test-bug #70302 on my gpu didn't crash, and it still doesn't crash, maybe that bug is related only on the gpu nvidia or gpu that have no workaround.
Someone who has a Radeon GPU with recent drivers should do a check.

just another useful info, I re-checked for security on that build that worked well, that test-bug #70302 on my gpu didn't crash, and it still doesn't crash, maybe that bug is related only on the gpu nvidia or gpu that have no workaround. Someone who has a Radeon GPU with recent drivers should do a check.

This issue was referenced by 9bd62379d6

This issue was referenced by 9bd62379d618ed80f7e1bbfd841b4fb86a08216a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Thomas Dinges added this to the 2.81 milestone 2023-02-08 16:46:56 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70659
No description provided.