Fix T70659 Warning, Regression, slow vertex selection

This changes the fix for T70302 by reducing the number of things we discard.